# torch-max-backend

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  bench_gemm.py  bench_gpt2_504.py  bench_gpt2_batch.py  bench_gpt2_compile.py  bench_gpt2_kernels.py  bench_max.py  bench_mfma_configs.py  bench_mfma_direct.mojo  bench_mojo.py  compare_gpt2_aten_profiles.py  debug_memory_leak.py  gemm_diagnosis.md  gemm_target_table_change9.csv  main.py  make_cov_report.sh  optimization_journal.md  overrides.txt  profile_gpt2_generate_aten.py  pyproject.toml  run_hf_max.py  run_hf_mojo.py  run_llama.py  run_llama2.py  run_scratch_gpt2.py  run_vgg.py  test_cache.py  try.py
.github/workflows/: ci.yml  publish.yml
current_bench/comparison/: gpt2_backend_summary_comparison.csv  gpt2_decode_function_comparison.csv
current_bench/mojo/: aten_gpu_time_decode.csv  aten_gpu_time_decode_by_shape.csv  aten_gpu_time_prefill.csv  aten_gpu_time_prefill_by_shape.csv  gpt2_aten_profile_summary.json
current_bench/rocm/: aten_gpu_time_decode.csv  aten_gpu_time_decode_by_shape.csv  aten_gpu_time_prefill.csv  aten_gpu_time_prefill_by_shape.csv  gpt2_aten_profile_summary.json
demo_scripts/: densenet.py  dummy_device.py  gemma3.py  gpt2.py  max_device_compile.py  mnist.py  multi_gpu_allreduce_bench.py  multi_gpu_ddp.py  multi_gpu_dispatch_bench.py  no_graph_breaks.py  run_all.sh  vgg.py  vgg_export.py
demo_scripts/dummy_mojo_kernels/: dummy.mojo
docs/: CONTRIBUTING.md  fast_eager_design.md  multi_gpu_training_plan.md  strided_owning_tensors_design.md  tensor_spec_design.md
max_torch_backend/: __init__.py  compiler.py  mappings.py
pretrained_models/: densenet.py  gemma3.py  gpt2.py  minimal_masked_fill_bug.py  qwen.py  qwen_with_kvcache.py  resnet.py  run_gpt2.py  vgg.py
reproducers/: amd_gevm_grid_oob.md  amd_gevm_grid_oob.mojo
scripts/: benchmark_fast_eager.py  load_from_mlir.py  populate_cache_for_tests.py
src/max_torch_backend/: compiler.py  utils.py
tests/: conftest.py  test_aten_functions.py  test_autograd_memory_lifetime.py  test_bf16_cross_entropy_host.py  test_compile_max_device.py  test_compile_mojo_device.py  test_compiler.py  test_dlpack.py  test_eager_kernels.py  test_eager_optimizer_ops.py  test_fa4_host_wiring.py  test_high_level_ops.py  test_max_device.py  test_model_state_conversion.py  test_mojo_autocast.py  test_mojo_device.py  test_mojo_device_runtime.py  test_multi_gpu.py  test_multi_gpu_collectives.py  test_multi_gpu_ddp.py  test_out_variant_resize.py  test_sdpa_host_wiring.py  test_tensor_spec_oom.py  test_unsupported_ops.py  test_utils.py  test_vit_base_patch16_224.py
tests/dummy_mojo_kernels/: dummy.mojo
tests/models/: test_mnist.py
torch_max_backend/: __init__.py  aten_functions.py  compiler.py  custom_mojo_ops.py  debug.py  flags.py  is_running_tests.py  mappings.py  max_device.py  max_device_aten_ops.py  testing.py  torch_custom_ops.py  torch_max_device_module.py  types.py
torch_max_backend/custom_torch_ops_in_mojo/: torch_custom_ops.py
torch_max_backend/eager_kernels/: __init__.py  aten_fast.py  conv_ops.mojo  data_movement_ops.mojo  elementwise_ops.mojo  logic_ops.mojo  matmul_ops.mojo  nn_ops.mojo  reduction_ops.mojo  tensor_holder.mojo
torch_max_backend/max_device/: apple_optimizations.py  dlpack.py  max_device_aten_ops.py  register.py  torch_max_device_module.py  torch_max_tensor.py
torch_max_backend/mojo_kernels/: __init__.mojo  activations.mojo  bitwise.mojo  math.mojo  pooling.mojo
torch_max_backend/torch_compile_backend/: compiler.py  debug.py  exporter.py  utils.py
torch_mojo_backend/: __init__.py  aten_functions.py  custom_mojo_ops.py  distributed.py  flags.py  is_running_tests.py  testing.py
torch_mojo_backend/custom_torch_ops_in_mojo/: torch_custom_ops.py
torch_mojo_backend/eager_flash_attention/: PROVENANCE.md  __init__.py  fa4_bwd_common.mojo  fa4_bwd_kernel.mojo  fa4_bwd_launch.mojo  fa4_fwd_common.mojo  fa4_fwd_kernel.mojo  fa4_fwd_launch.mojo  fa4_launch_cache.mojo  fa4_ops.mojo  fa4_tma4.mojo  fa4_wgmma_f16.mojo
torch_mojo_backend/eager_kernels/: __init__.py  activation_backward_ops.mojo  activation_forward_kernels.mojo  activation_forward_ops.mojo  aten_fast.py  bf16_cross_entropy_kernels.mojo  bf16_cross_entropy_ops.mojo  bf16_gemm_kernels.mojo  bf16_gemm_nn_v4_kernels.mojo  bf16_gemm_nt_v4_kernels.mojo  bf16_gemm_tn_v4_kernels.mojo  bf16_gemm_v3_kernels.mojo  bf16_matmul_ops.mojo  comm_ops.mojo  conv_ops.mojo  data_movement_ops.mojo  dropout_ops.mojo  elementwise_ops.mojo  embedding_backward_kernels.mojo  embedding_backward_ops.mojo  foreach_clip_contract.mojo  foreach_clip_kernels.mojo  logic_ops.mojo  loss_ops.mojo  matmul_ops.mojo  native_dropout_kernels.mojo  nn_ops.mojo  normalization_backward_dx.mojo  normalization_backward_ops.mojo  normalization_backward_params.mojo  normalization_forward_kernels.mojo  normalization_forward_ops.mojo  optimizer_contract.mojo  optimizer_kernels.mojo  optimizer_ops.mojo  reduction_ops.mojo  sdpa_backward_ops.mojo  (+6 more)
upstream_issues/: README.md  modular-1-stream-launch-closure-captures.md  modular-2-collectives-on-nondefault-stream.md  modular-3-explicit-rank-for-collectives.md  modular-4-2stage-allreduce-signal-lifetime.md  pytorch-1-privateuse1-guard-device-count.md  pytorch-2-pinned-memory-hook-python-backend.md  pytorch-3-futurewrappingwork-error-propagation.md
(+18 files in other folders)
