[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch-max-backend"
version = "0.2.0"
description = "A PyTorch backend implemented using Modular's MAX framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "max",
    "tabulate",
    "torch",
    "beartype>=0.17.0",
]

[project.urls]
"Source" = "https://github.com/gabrieldemarmiesse/torch-max-backend"
"Documentation" = "https://gabrieldemarmiesse.github.io/torch-max-backend/"
"Bug Tracker" = "https://github.com/gabrieldemarmiesse/torch-max-backend/issues"

[tool.hatch.build.targets.wheel]
packages = ["torch_max_backend"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",  # pyflakes (includes unused imports)
    "UP", # pyupgrade
]

[tool.uv.sources]
max = [
    { index = "modular-nightly" },
]
mblack = [
    { index = "modular-nightly" },
]
max-core = [
    { index = "modular-nightly" },
]
mojo-compiler = [
    { index = "modular-nightly" },
]
torch = { url = "https://github.com/gabrieldemarmiesse/pytorch/releases/download/custom_device/torch-2.10.0a0+git101bfc6-cp312-cp312-linux_x86_64.whl" }

[[tool.uv.index]]
name = "modular-nightly"
url = "https://dl.modular.com/public/nightly/python/simple/"
explicit = true

[tool.uv]
prerelease = "allow"
python-preference = "only-managed"

[tool.ruff.format]
skip-magic-trailing-comma = true

[dependency-groups]
dev = [
    # Bump the version of max nightly here
    "mblack==25.7.0.dev2025092305",
    "max==25.7.0.dev2025092305",
    "max-core==25.7.0.dev2025092305",
    "mojo-compiler==0.25.7.0.dev2025092305",
    "hatchling",
    "ipython",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "pytest-forked>=1.6.0",
    "pytest-split>=0.10.0",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.4",
    "ruff>=0.12.7",
    "tiktoken>=0.11.0",
    "line-profiler>=5.0.0",
    "coverage>=7.10.6",
    "pytest-cov>=7.0.0",
    "rich>=14.1.0",
    "matplotlib>=3.10.6",
    "torch",
    "setuptools>=80.9.0",
    "transformers>=4.56.2",
]

