[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch-max-backend"
version = "0.2.0"
description = "..."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "max",
    "psutil>=7.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["torch_max_backend"]



[tool.uv.sources]
max = [
    { index = "modular-nightly" },
]
mblack = [
    { index = "modular-nightly" },
]
max-core = [
    { index = "modular-nightly" },
]
mojo = [
    { index = "modular-nightly" },
]
mojo-lldb-libs = [
    { index = "modular-nightly" },
]
mojo-compiler = [
    { index = "modular-nightly" },
]
max-mojo-libs = [
    { index = "modular-nightly" },
]
max-mojo-mogg-libs = [
    { index = "modular-nightly" },
]
mojo-compiler-mojo-libs = [
    { index = "modular-nightly" },
]

[[tool.uv.index]]
name = "modular-nightly"
url = "https://whl.modular.com/nightly/simple/"
explicit = true

[tool.uv]
prerelease = "explicit"
python-preference = "only-managed"
index-strategy = "unsafe-best-match"

[tool.ruff.format]
skip-magic-trailing-comma = true

[dependency-groups]
dev = [
    # Bump the version of max nightly here
    "max==26.3.0.dev2026041605",
    "max-core==26.3.0.dev2026041605",
    "max-mojo-libs==26.3.0.dev2026041605",
    "mojo==0.26.3.0.dev2026041605",
    "mblack==26.3.0.dev2026041605",
    "mojo-lldb-libs==0.26.3.0.dev2026041605",
    "mojo-compiler==0.26.3.0.dev2026041605",
    "max-mojo-mogg-libs==26.3.0.dev2026041605",
    "mojo-compiler-mojo-libs==0.26.3.0.dev2026041605",
    "hatchling",
]

